--- a/deploy/dev/templates/cluster-democratic-csi.yaml
+++ b/deploy/dev/templates/cluster-democratic-csi.yaml
@@ -17,10 +17,10 @@ spec:
     helm:
       parameters:
         - name: democraticcsi.driver.config.httpConnection.host
-          value: {{ .Values.democraticcsi.driver.config.httpConnection.host }}
+          value: {{ .Values.democratic-csi.driver.config.httpConnection.host }}
         - name: democratic-csi.driver.config.httpConnection.password
-          value: {{ .Values.democraticcsi.driver.config.httpConnection.password }}
+          value: {{ .Values.democratic-csi.driver.config.httpConnection.password }}
         - name: democratic-csi.driver.config.httpConnection.username
-          value: {{ .Values.democraticcsi.driver.config.httpConnection.username }}
+          value: {{ .Values.democratic-csi.driver.config.httpConnection.username }}
         - name: democratic-csi.driver.config.iscsi.targetPortal
-          value: {{ .Values.democraticcsi.driver.config.iscsi.targetPortal }}
+          value: {{ .Values.democratic-csi.driver.config.iscsi.targetPortal }}
