--- a/deploy/dev/templates/cluster-democratic-csi.yaml
+++ b/deploy/dev/templates/cluster-democratic-csi.yaml
@@ -16,11 +16,11 @@ spec:
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
       parameters:
-        - name: democraticcsi.driver.config.httpConnection.host
-          value: {{ .Values.democratic-csi.driver.config.httpConnection.host }}
+        - name: democratic-csi.driver.config.httpConnection.host
+          value: {{ index .Values "democratic-csi" "driver" "config" "httpConnection" "host" }}
         - name: democratic-csi.driver.config.httpConnection.password
-          value: {{ .Values.democratic-csi.driver.config.httpConnection.password }}
+          value: {{ index .Values "democratic-csi" "driver" "config" "httpConnection" "password" }}
         - name: democratic-csi.driver.config.httpConnection.username
-          value: {{ .Values.democratic-csi.driver.config.httpConnection.username }}
+          value: {{ index .Values "democratic-csi" "driver" "config" "httpConnection" "username" }}
         - name: democratic-csi.driver.config.iscsi.targetPortal
-          value: {{ .Values.democratic-csi.driver.config.iscsi.targetPortal }}
+          value: {{ index .Values "democratic-csi" "driver" "config" "iscsi" "targetPortal" }}
