--- a/cluster/templates/roles.yaml
+++ b/cluster/templates/roles.yaml
@@ -21,7 +21,10 @@ spec:
       namespace: "openshift-gitops"
     spec:
       ignoreDifferences:
-      - jsonPointers:
+      - kind: Application
+        group: argoproj.io
+        version: v1alpha1
+        jsonPointers:
         - /spec/syncPolicy
       project: default
       destination:
