--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,12 +2,23 @@ fail_fast: true
 default_language_version:
   python: python3
 repos:
+  - repo: local
+    hooks:
+      - id: validate-adr
+        name: Validate ADRs
+        entry: bash -lc 'task validate:adr'
+        language: system
+        pass_filenames: false
+      - id: validate-helm
+        name: Helm template validation
+        entry: bash -lc 'task validate:helm'
+        language: system
+        pass_filenames: false
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.28.0
     hooks:
       - id: gitleaks
         name: "🔒 security · Detect hardcoded secrets"
-
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
